...

    <string name="title_activity_home_page">HomePage</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_close">Close</string>
    <string name="welcome_to_ghcli">GHCli</string>


    <!--Messages Login-->
    <string name="login_failed">Login failed. Please try again!</string>
...
